azure-export-20260102-134114/rg-c1-eastus/rg-c1-eastus-nsgs.json
[
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"11b414dd-627c-48e0-ac22-c3d797eb5d13\"",
        "id": "/subscriptions/8a353573-11b5-487f-ae19-23e98b217094/resourceGroups/rg-c1-eastus/providers/Microsoft.Network/networkSecurityGroups/nsg-c1/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-c1-eastus",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"11b414dd-627c-48e0-ac22-c3d797eb5d13\"",
        "id": "/subscriptions/8a353573-11b5-487f-ae19-23e98b217094/resourceGroups/rg-c1-eastus/providers/Microsoft.Network/networkSecurityGroups/nsg-c1/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-c1-eastus",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"11b414dd-627c-48e0-ac22-c3d797eb5d13\"",
        "id": "/subscriptions/8a353573-11b5-487f-ae19-23e98b217094/resourceGroups/rg-c1-eastus/providers/Microsoft.Network/networkSecurityGroups/nsg-c1/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-c1-eastus",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"11b414dd-627c-48e0-ac22-c3d797eb5d13\"",
        "id": "/subscriptions/8a353573-11b5-487f-ae19-23e98b217094/resourceGroups/rg-c1-eastus/providers/Microsoft.Network/networkSecurityGroups/nsg-c1/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-c1-eastus",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"11b414dd-627c-48e0-ac22-c3d797eb5d13\"",
        "id": "/subscriptions/8a353573-11b5-487f-ae19-23e98b217094/resourceGroups/rg-c1-eastus/providers/Microsoft.Network/networkSecurityGroups/nsg-c1/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-c1-eastus",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"11b414dd-627c-48e0-ac22-c3d797eb5d13\"",
        "id": "/subscriptions/8a353573-11b5-487f-ae19-23e98b217094/resourceGroups/rg-c1-eastus/providers/Microsoft.Network/networkSecurityGroups/nsg-c1/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-c1-eastus",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"11b414dd-627c-48e0-ac22-c3d797eb5d13\"",
    "id": "/subscriptions/8a353573-11b5-487f-ae19-23e98b217094/resourceGroups/rg-c1-eastus/providers/Microsoft.Network/networkSecurityGroups/nsg-c1",
    "location": "eastus",
    "name": "nsg-c1",
    "provisioningState": "Succeeded",
    "resourceGroup": "rg-c1-eastus",
    "resourceGuid": "364bde5f-8856-4a46-93ad-4a5f8e8c0b42",
    "securityRules": [
      {
        "access": "Allow",
        "destinationAddressPrefix": "10.0.0.0/16",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"11b414dd-627c-48e0-ac22-c3d797eb5d13\"",
        "id": "/subscriptions/8a353573-11b5-487f-ae19-23e98b217094/resourceGroups/rg-c1-eastus/providers/Microsoft.Network/networkSecurityGroups/nsg-c1/securityRules/allow-c2-to-c1",
        "name": "allow-c2-to-c1",
        "priority": 100,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-c1-eastus",
        "sourceAddressPrefix": "10.1.0.0/16",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      }
    ],
    "subnets": [
      {
        "id": "/subscriptions/8a353573-11b5-487f-ae19-23e98b217094/resourceGroups/RG-C1-EASTUS/providers/Microsoft.Network/virtualNetworks/VNET-C1/subnets/SUBNET-C1",
        "resourceGroup": "RG-C1-EASTUS"
      }
    ],
    "type": "Microsoft.Network/networkSecurityGroups"
  }
]
